[gd_scene load_steps=9 format=2]

[ext_resource path="res://Things/HealthBar/HealthBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Things/Die/Sword_icon.png" type="Texture" id=2]
[ext_resource path="res://Things/Die/Shield_icon.png" type="Texture" id=3]
[ext_resource path="res://Things/Die/Heat_icon.png" type="Texture" id=4]
[ext_resource path="res://Screens/Fight/RubikMonoOne-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Things/StatsUI/StatsUI.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 42
extra_spacing_char = -3
extra_spacing_space = -4
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 49
font_data = ExtResource( 5 )

[node name="Stats" type="VBoxContainer"]
margin_left = 12.0
margin_top = 229.0
margin_right = 706.0
margin_bottom = 502.0
custom_constants/separation = 35
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Monster" type="VBoxContainer" parent="."]
margin_right = 694.0
margin_bottom = 118.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MonsterName" type="Label" parent="Monster"]
margin_right = 694.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0313726, 0.0941176, 0.12549, 1 )
text = "Skelly boy"
align = 1
valign = 1

[node name="MonsterStats" type="HBoxContainer" parent="Monster"]
margin_top = 57.0
margin_right = 694.0
margin_bottom = 118.0
custom_constants/separation = 34
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Monster/MonsterStats"]
margin_right = 395.0
margin_bottom = 61.0
custom_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="Monster/MonsterStats/HBoxContainer"]
margin_right = 60.0
margin_bottom = 61.0
texture = ExtResource( 4 )

[node name="HealthBar" parent="Monster/MonsterStats/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 70.0
margin_right = 395.0
margin_bottom = 61.0

[node name="ProgressBar" parent="Monster/MonsterStats/HBoxContainer/HealthBar" index="0"]
margin_top = 5.0
margin_right = 325.0
margin_bottom = 55.0
rect_min_size = Vector2( 325, 50 )

[node name="Label" parent="Monster/MonsterStats/HBoxContainer/HealthBar" index="1"]
margin_left = 54.0
margin_top = 7.0
margin_right = 271.0
margin_bottom = 53.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Monster/MonsterStats"]
margin_left = 429.0
margin_right = 535.0
margin_bottom = 61.0

[node name="TextureRect2" type="TextureRect" parent="Monster/MonsterStats/HBoxContainer2"]
margin_right = 60.0
margin_bottom = 61.0
texture = ExtResource( 3 )

[node name="MonsterDefence" type="Label" parent="Monster/MonsterStats/HBoxContainer2"]
margin_left = 64.0
margin_right = 106.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0313726, 0.0941176, 0.12549, 1 )
text = "5"

[node name="HBoxContainer3" type="HBoxContainer" parent="Monster/MonsterStats"]
margin_left = 569.0
margin_right = 675.0
margin_bottom = 61.0

[node name="TextureRect" type="TextureRect" parent="Monster/MonsterStats/HBoxContainer3"]
margin_right = 60.0
margin_bottom = 61.0
texture = ExtResource( 2 )

[node name="MonsterAttack" type="Label" parent="Monster/MonsterStats/HBoxContainer3"]
margin_left = 64.0
margin_right = 106.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0313726, 0.0941176, 0.12549, 1 )
text = "5"

[node name="Hero" type="VBoxContainer" parent="."]
margin_top = 153.0
margin_right = 694.0
margin_bottom = 270.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeroName" type="Label" parent="Hero"]
margin_right = 694.0
margin_bottom = 53.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0313726, 0.0941176, 0.12549, 1 )
text = "Hero (you)"
align = 1
valign = 1

[node name="HeroStats" type="HBoxContainer" parent="Hero"]
margin_top = 57.0
margin_right = 694.0
margin_bottom = 117.0
custom_constants/separation = 31
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Hero/HeroStats"]
margin_right = 665.0
margin_bottom = 60.0
custom_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="Hero/HeroStats/HBoxContainer"]
margin_right = 60.0
margin_bottom = 60.0
texture = ExtResource( 4 )

[node name="HealthBar" parent="Hero/HeroStats/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 70.0
margin_right = 665.0
margin_bottom = 60.0
max_value = 20

[node name="ProgressBar" parent="Hero/HeroStats/HBoxContainer/HealthBar" index="0"]
margin_top = 5.0
margin_right = 595.0
margin_bottom = 55.0
rect_min_size = Vector2( 595, 50 )

[node name="Label" parent="Hero/HeroStats/HBoxContainer/HealthBar" index="1"]
margin_left = 189.0
margin_top = 7.0
margin_right = 406.0
margin_bottom = 53.0

[editable path="Monster/MonsterStats/HBoxContainer/HealthBar"]
[editable path="Hero/HeroStats/HBoxContainer/HealthBar"]
